--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
         <meta charset="utf-8">
         <title></title>
         <link href="src/style.css" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Source+Code+Pro:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
     </head>
-    <body>
 
+    <body>
         <h1>My Website Style Guide</h1>
 
         <div class="container">
@@ -32,28 +41,51 @@
         <div class="container">
             <h2>Fonts</h2>
             <div class="source-code-pro font">
-                <p>Source Code Pro</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-label">Source Code Pro</p>
+                <p class="normal">The quick brown fox jumps over the lazy dog.</p>
+                <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+                <p class="italic">The quick brown fox jumps over the lazy dog.</p>
             </div>
             <div class="nunito-sans font">
-                <p>Nunito Sans</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-label">Nunito Sans</p>
+                <p class="normal">The quick brown fox jumps over the lazy dog.</p>
+                <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+                <p class="italic">The quick brown fox jumps over the lazy dog.</p>
             </div>
             <div class="poppins font">
-                <p>Poppins</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
-                <p>The quick brown fox jumps over the lazy dog.</p>
+                <p class="font-label">Poppins</p>
+                <p class="normal">The quick brown fox jumps over the lazy dog.</p>
+                <p class="bold">The quick brown fox jumps over the lazy dog.</p>
+                <p class="italic">The quick brown fox jumps over the lazy dog.</p>
             </div>
         </div>
 
         <div class="container">
             <h2>Text Styles</h2>
-            <div class=""></div>
+            <div class="head1">
+                <h1>H1: Main page heading</h1>
+                <ul class="list">
+                    <li>Font-weight: 700 (bold)</li>
+                    <li>Font-size: 26px</li>
+                    <li>Font-family: Nunito Sans</li>
+                </ul>
+            </div>
+            <div class="head2">
+                <h2>H2: Subheading</h2>
+                <ul class="list">
+                    <li>Font-weight: 500</li>
+                    <li>Font-size: 18px</li>
+                    <li>Font-family: Poppins</li>
+                </ul>
+            </div>
+            <div class="paragraph">
+                <p>P: Paragraph text</p>
+                <ul class="list">
+                    <li>Font-weight: 400 (regular)</li>
+                    <li>Font-size: 14px</li>
+                    <li>Font-family: Poppins</li>
+                </ul>
+            </div>
         </div>
     </body>
 </html>
